tests/ui/g-route-nested-policy-not-promoted.stderr
error[E0080]: evaluation panicked: Program::policy must annotate the controller self-send that opens each route/loop arm
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Route<hibana::g::Seq<hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>, 10>, hibana::g::Route<hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<161, (), hibana::integration::cap::control::LoopContinueKind>>, 10>, hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, 10>>>, hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<162, (), hibana::integration::cap::control::LoopBreakKind>>, 10>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<Seq<Policy<hibana::g::Send<0, 0, Msg<161, (), LoopContinueKind>>, 10>, Route<Policy<hibana::g::Send<0, 0, Msg<161, (), LoopContinueKind>>, 10>, Policy<hibana::g::Send<0, 0, Msg<162, (), LoopBreakKind>>, 10>>>, Policy<hibana::g::Send<0, 0, Msg<162, (), LoopBreakKind>>, 10>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  | /             panic!(
  | |                 "Program::policy must annotate the controller self-send that opens each route/loop arm"
  | |             )
  | |_____________- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Route<Seq<Policy<hibana::g::Send<0, 0, Msg<161, (), LoopContinueKind>>, 10>, Route<Policy<hibana::g::Send<0, 0, Msg<161, (), LoopContinueKind>>, 10>, Policy<hibana::g::Send<0, 0, Msg<162, (), LoopBreakKind>>, 10>>>, Policy<hibana::g::Send<0, 0, Msg<162, (), LoopBreakKind>>, 10>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
